MD-6614: open java.base/java.net package to unnamed modules. Java 17 support